--- a/views/admin/gerenciamento/instrutores/edit.njk
+++ b/views/admin/gerenciamento/instrutores/edit.njk
@@ -104,10 +104,10 @@
                 <input type="text" class="form-control" id="email" name="email" value="{{InstrutoresAcademia.email}}" placeholder="email@email.com" required>
             </div>
 
-            <div class="form-field">
+            {# <div class="form-field">
                 <label for="senha">Senha</label>
                 <input type="text" class="form-control" id="senha" name="senha" value="{{InstrutoresAcademia.senha}}" placeholder="digite uma senha" required>
-            </div>
+            </div> #}
 
             <div class="form-field">
                 <label for="endereco">Endereço:</label>
