--- a/views/admin/gerenciamento/instrutores/search.njk
+++ b/views/admin/gerenciamento/instrutores/search.njk
@@ -135,7 +135,7 @@
 
             {%else%}
             <div class="not-found">
-                <h2>Nenhum Instrutor encontrado encontrado</h2>
+                <h2>Nenhum Instrutor encontrado</h2>
             </div>
             {% endif %}
    
