--- a/views/admin/agendamento/edit.njk
+++ b/views/admin/agendamento/edit.njk
@@ -23,13 +23,13 @@
                         <span class="title">Cadastro</span>
                     </a>
                 </li>
-                <li class="list ">
+                <li class="list active">
                     <a href="/dashboard/agendamento">
                         <span class="icon"><ion-icon name="calendar-number-outline"></ion-icon></span>
                         <span class="title">Agendamento</span>
                     </a>
                 </li>
-                <li class="list active">
+                <li class="list ">
                     <a href="/dashboard/gerenciamento/funcionarios">
                         <span class="icon"><ion-icon name="business-outline"></ion-icon></span>
                         <span class="title">Gerenciamento</span>
@@ -60,81 +60,95 @@
 {%endblock%}
 
 {% block content %}
-        <h1 class="ver-title">{{clienteAcademia.nome}} {{clienteAcademia.sobrenome}}</h1>
+        <h1 class="ver-title">Editando Agendamento: {{agendamento.dia}} </h1>
 <hr>
         <div class="ver-menu">
             <ul>
-                <li><a href="/dashboard/gerenciamento/clientes">Voltar </a></li>
-                <li> / {{clienteAcademia.nome}} {{clienteAcademia.sobrenome}} </li>
+                <li><a href="/dashboard/agendamento/">Voltar </a></li>
+                <li> / {{agendamento.clienteNome}} </li>
             </ul>
         </div>
 
+    {% for mensagem in msgErro %}
+
+                <div class="alert-box deleted">
+                    <p>{{mensagem}}</p>
+                    <button class="close-alert"><ion-icon name="close"></ion-icon></button>
+                </div>
+
+        {% endfor %}
+        
+        {% for mensagem in msgSucesso %}
+
+                <div class="alert-box sucesso">
+                    <p>{{mensagem}}</p>
+                    <button class="close-alert"><ion-icon name="close"></ion-icon></button>
+                </div>
+
+        {% endfor %}
 
 
-
-    <form  action="/dashboard/gerenciamento/clientes/edit/{{clienteAcademia._id}}?_method=PUT" method="POST">
+    <form  action="/dashboard/agendamento/edit/{{agendamento._id}}?_method=PUT" method="POST">
         <div class="edit-form">
-            <div class="form-field">
-                <label for="nome">Nome</label>
-                <input type="text" class="form-control" id="nome" name="nome" value="{{clienteAcademia.nome}}" placeholder="Primeiro Nome" required>
-            </div>
+
 
             <div class="form-field">
-                <label for="sobrenome">Sobrenome</label>
-                <input type="text" class="form-control" id="sobrenome" name="sobrenome" value="{{clienteAcademia.sobrenome}}" placeholder="Sobrenome" required>
-            </div>
-
-            <div class="form-field">
-                <label for="cpf">CPF </label>
-                <input type="text" class="form-control" id="cpf" name="cpf" value="{{clienteAcademia.cpf}}" placeholder="First Name" required>
-            </div>
-
-            <div class="form-field">
-                <label for="dataNascimento">Data de nascimento</label>
-                <input type="text" class="form-control" id="dataNascimento" name="dataNascimento" value="{{clienteAcademia.dataNascimento}}" placeholder="data de nascimento" required>
-            </div>
-
-            <div class="form-field">
-                <label for="telefone">Telefone</label>
-                <input type="text" class="form-control" id="telefone" name="telefone" value="{{clienteAcademia.telefone}}" placeholder="(00) 00000-0000" required>
-            </div>
-
-            <div class="form-field">
-                <label for="email">Email</label>
-                <input type="text" class="form-control" id="email" name="email" value="{{clienteAcademia.email}}" placeholder="email@email.com" required>
-            </div>
-
-            {# <div class="form-field">
-                <label for="senha">Senha</label>
-                <input type="text" class="form-control" id="senha" name="senha" value="{{clienteAcademia.senha}}" placeholder="digite uma senha" required>
-            </div> #}
-
-            <div class="form-field">
-                <label for="sexo">Sexo</label>
-                <select name="sexo" id="sexo">
-                    {% if  clienteAcademia.sexo == "Masculino"   %}
-                        <option value="Masculino" selected> Masculino</option>
-                        <option value="Feminino" >Feminino</option>
-                        <option value="Outro" >Outro</option>
-                    {% endif %}
-                    {% if clienteAcademia.sexo == "Feminino"  %}
-                        <option value="Masculino" >Masculino</option>
-                        <option value="Feminino" selected>Feminino</option>
-                        <option value="Outro" >Outro</option>
-                    {% endif %}
-                    {% if clienteAcademia.sexo == "Outro"  %}
-                        <option value="Masculino" >Masculino</option>
-                        <option value="Feminino" >Feminino</option>
-                        <option value="Outro" selected>Outro</option>
-                    {% endif %}
+                <label for="cliente">Cliente</label>
+                <select class="disabled" name="cliente" id="cliente">
+                    <option value="{{agendamento.clienteId}}">{{agendamento.clienteNome}}</option>
                 </select>
-
             </div>
+
+
+            <div class="form-field">
+                <label for="modalidade">Modalidade</label>
+                <select class="disabled" name="modalidade" id="modalidade">
+                    <option value="{{agendamento.modalidade}}">{{agendamento.modalidade}}</option>
+                </select>
+            </div>
+
+            <div class="form-field">
+                 <label for="instrutor">Instrutor</label>
+                <select name="instrutor" id="instrutor" required>
+                    
+                    {% for instrutor in instrutores %}
+                        {% if instrutor.id == agendamento.instrutorId %}
+                            <option selected value="{{instrutor.id}}">{{instrutor.nome}} {{instrutor.sobrenome}}</option>
+                            {%else%}
+                            <option value="{{instrutor.id}}">{{instrutor.nome}} {{instrutor.sobrenome}}</option>
+
+                        {% endif %}
+                    {% endfor %}
+
+                </select>
+            </div>
+
+    
+
+            <div class="form-field">
+                <label for="dia">Dia:</label>
+               <input type="date" name="dia" id="dia" value="{{dia}}" required>
+            </div>
+
+            <div class="form-field">
+                <label for="horario">Horario:</label>
+               <select name="horario" id="horario" required>
+                {% for horario in horarios %}
+                    {% if horario.hora == agendamento.horarioComeca %}
+                        <option selected value="{{horario.hora}}">{{horario.hora}}</option>
+
+                        {%else%}
+                        <option value="{{horario.hora}}">{{horario.hora}}</option>
+                    {% endif %}
+                {% endfor %}
+               </select>
+            </div>
+            
             
             <div class="form-field">
                 <label for="status">Status</label>
                 <select name="status" id="status">
-                    {% if clienteAcademia.status == "Ativo" %}
+                    {% if agendamento.status == "Ativo" %}
                         <option value="Ativo" selected>Ativo</option>
                         <option value="Inativo">Inativo</option>
                         {%- else -%}
@@ -147,9 +161,9 @@
     </div>
       
         <div class="form-buttons">
-            <button type="submit" class="btn ver">Atualizar Cliente</button>
+            <button type="submit" class="btn ver">Atualizar agendamento</button>
 
-            <button type="button" class="btn deletar" id="deleteModal">Deletar Cliente</button>
+            <button type="button" class="btn deletar" id="deleteModal">Deletar Agendamento</button>
         </div>
 
     </form>
@@ -161,18 +175,18 @@
         <div class="modal">
             <div class="modal-content">
                 <div class="modal-info">
-                    <h1>Voce esta prestes a excluir o registro de um Cliente.</h1>
+                    <h1>Voce esta prestes a excluir um agendamento no dia {{agendamento.dia}} e horario {{agendamento.horarioComeca}} .</h1>
                 </div>
                 <div class="modal-aviso">
-                    <h2>Isso ira excluir o registro do Cliente {{clienteAcademia.nome}} {{clienteAcademia.sobrenome}} , Você tem certeza disso?</h2>
+                    <h2>Isso ira excluir o agendamento do Cliente {{agendamento.clienteNome}}  no dia {{agendamento.dia}} e horario {{agendamento.horarioComeca}} , Você tem certeza disso?</h2>
                 </div>
 
                 <div class="modal-buttons">
                     <a class="close_modal">
                         fechar
                     </a>
-                    <form action="/dashboard/gerenciamento/clientes/edit/{{clienteAcademia._id}}?_method=DELETE" method="POST">
-                        <button type="submit" class="btn">Sim, Deletar Cliente</button>
+                    <form action="/dashboard/agendamento/edit/{{agendamento._id}}?_method=DELETE" method="POST">
+                        <button type="submit" class="btn">Sim, Deletar Agendamento</button>
                     </form>
                 </div>
             </div>
@@ -186,4 +200,7 @@
 
 {%block scripts%}
     <script src="/scripts/modal.js"></script>
+    <script src="/scripts/flashmsg.js"></script>
+
+    <script src="/scripts/hoje.js"></script>
 {%endblock%}
