--- a/views/admin/agendamento/search-cliente.njk
+++ b/views/admin/agendamento/search-cliente.njk
@@ -3,6 +3,7 @@
 
 {% block head %}
         <link rel="stylesheet" href="/styles/gerenciamento.css">
+        <link rel="stylesheet" href="/styles/table.css">
         <title>Acadmin - Gerenciamento</title>
 {% endblock %}
 
@@ -22,13 +23,13 @@
                         <span class="title">Cadastro</span>
                     </a>
                 </li>
-                <li class="list ">
+                <li class="list active">
                     <a href="/dashboard/agendamento">
                         <span class="icon"><ion-icon name="calendar-number-outline"></ion-icon></span>
                         <span class="title">Agendamento</span>
                     </a>
                 </li>
-                <li class="list active">
+                <li class="list ">
                     <a href="/dashboard/gerenciamento/funcionarios">
                         <span class="icon"><ion-icon name="business-outline"></ion-icon></span>
                         <span class="title">Gerenciamento</span>
@@ -59,38 +60,35 @@
 {%endblock%}
 
 {% block content %}
-        <h1>Gerenciamento</h1>
-        <div class="table-wrapper">
-            <nav id="admin-menu">
-                <ul>
-                    <li><a href="/dashboard/gerenciamento/funcionarios" class="ativo">Funcionarios</a></li>
-                    <li><a href="/dashboard/gerenciamento/clientes" >Clientes</a></li>
-                    <li><a href="/dashboard/gerenciamento/instrutores" >Instrutores</a></li>
-                </ul>
-            </nav>
+        <h1>Escolha o cliente</h1>
 
+        <div class="ver-menu">
+            <ul>
+                <li><a href="/dashboard/agendamento">Agendamentos</a> </li>
+            </ul>
+            <ul>
+                <li>> Cliente </li>
+            </ul>
+        </div>
+
+        <div class="table-wrapper">
             <div class="title table-nav">
                 <h1>Pesquisar</h1>
 
-                <form class="search-form" role="search" method="POST" action="/dashboard/gerenciamento/funcionarios/search">
+                <form class="search-form" role="search" method="POST" action="/dashboard/agendamento/criar/search">
                 <input type="search" name="searchTerm" class="search-input" placeholder="Search..." aria-label="Search">
                 </form>
-
-                <a href="/dashboard/cadastro/funcionario" class="add">+ Funcionario</a>
             </div>
 
 
-            {% if FuncionariosAcademia.length > 0 %}
-
+            {% if clientesAcademia.length > 0 %}
                 {%block table%}
-
-
-                        <div class="table-head">
+                        <div class="table-head search-cliente">
                             <ul>
-                                <li>Nome <div class="filter nome"></div></li>
-                                <li>Email <div class="filter email"></div></li>
-                                <li>Telefone <div class="filter telefone"></div></li>
-                                <li>Status <div class="filter status"></div></li>
+                                <li>Nome</li>
+                                <li>Email</li>
+                                <li>cpf</li>
+                                <li>Status</li>
                                 <li>Acões</li>
                             </ul>
                         </div>
@@ -98,44 +96,36 @@
                         <div class="table">
                             
 
-                            {% for funcionario in FuncionariosAcademia %}
+                            {% for cliente in clientesAcademia %}
 
-                                <div class="row">
+                                <div class="row search-cliente">
                                     <ul>
-                                        <li>{{funcionario.nome}} {{funcionario.sobrenome}}</li>
-                                        <li>{{funcionario.email}}</li>
-                                        <li>{{funcionario.telefone}}</li>
-                                        <li>{{funcionario.status}}</li>
+                                        <li>{{cliente.nome}} {{cliente.sobrenome}}</li>
+                                        <li>{{cliente.email}}</li>
+                                        <li>{{cliente.cpf}}</li>
+                                        <li>{{cliente.status}}</li>
 
-                                        <li class="actions">
-                                            <a href="/dashboard/gerenciamento/funcionarios/ver/{{funcionario._id}}" class="ver act-btn"><ion-icon class="icon" name="eye-outline"></ion-icon> ver</a>
+                                        <li class="actions agendamento">
+                                            
+                                            <a href="/dashboard/agendamento/criar/novo/{{cliente._id}}" class="ver act-btn"><ion-icon class="icon" name="calendar-number-outline"></ion-icon> Agendar</a>
 
-                                            <a class="editar act-btn" href="/dashboard/gerenciamento/funcionarios/edit/{{funcionario._id}}"><ion-icon class="icon"  name="pencil-outline"></ion-icon> Editar</a>
-
+                                        {# <form action="/dashboard/agendamento/criar/novo/{{cliente._id}}?_method=POST" method="POST" class="position-relative">
                                             
-                                            
-                                        <form action="/dashboard/gerenciamento/funcionarios/edit/{{funcionario._id}}?_method=DELETE" method="POST" class="position-relative">
-                                            
-                                            <button class="deletar act-btn" type="submit" class="btn btn-primary"><ion-icon class="icon" name="person-remove-outline"></ion-icon> Deletar </button>
-                                        </form>
-                                            
-                                            
+                                            <button class="agenda-btn act-btn" type="submit" class="btn btn-primary"><ion-icon class="icon" name="calendar-number-outline"></ion-icon> Agendar</button>
+                                        </form> #}
                                         </li>
 
                                     </ul>
                                 </div>
 
                             {% endfor %}
-                        
-
-                            
                         </div>
                 {%endblock%}
 
 
             {%else%}
             <div class="not-found">
-                <h2>Nenhum Funcionario encontrado</h2>
+                <h2>Nenhum Cliente encontrado</h2>
             </div>
             {% endif %}
    
