--- a/views/admin/cadastro/funcionario.njk
+++ b/views/admin/cadastro/funcionario.njk
@@ -70,7 +70,15 @@
             <div class="form-wrapper"  id="funcionario">
                 <h1>Cadastrar Funcionario</h1>
 
-                {% for mensagem in msg%}
+                 {% for mensagem in sucesso %}
+
+                <div class="alert-box sucesso">
+                    <p>{{mensagem}}</p>
+                    <button class="close-alert"><ion-icon name="close"></ion-icon></button>
+                </div>
+
+            {% endfor %}
+            {% for mensagem in erro %}
 
                 <div class="alert-box deleted">
                     <p>{{mensagem}}</p>
@@ -83,33 +91,35 @@
 
                      <div class="input-wrapper">
                         <label for="nome">Nome </label>
-                        <input type="text" name="nome" id="nome" placeholder="nome">
+                        <input type="text" name="nome" id="nome" required placeholder="nome">
                     </div>
 
                     <div class="input-wrapper">
                         <label for="sobrenome">Sobrenome </label>
-                        <input type="text" name="sobrenome" id="sobrenome" placeholder="sobrenome">
+                        <input type="text" name="sobrenome" id="sobrenome" required placeholder="sobrenome">
                     </div>
 
                     <div class="input-wrapper">
                         <label for="dataNascimento">Data De Nascimento </label>
-                        <input type="Date" name="dataNascimento" id="dataNascimento" placeholder="dataNascimento" 
+                        <input type="Date" name="dataNascimento" id="dataNascimento" required placeholder="dataNascimento" 
                         min="1930-01-01" max='2023-03-31'>
                     </div>
 
                     <div class="input-wrapper">
                         <label for="email">Email </label>
-                        <input type="text" name="email" id="email" placeholder="seu@email.com">
+                        <input type="text" name="email" id="email" required placeholder="seu@email.com">
+                        <span id="email-error" class="error-message"></span>
                     </div>
 
                      <div class="input-wrapper">
                         <label for="senha">Senha </label>
-                        <input type="senha" name="senha" id="senha" placeholder="senha">
+                        <input type="password" name="senha" id="senha" required placeholder="senha">
                     </div>
 
                     <div class="input-wrapper">
                         <label for="cpf">CPF </label>
-                        <input type="text" name="cpf" id="cpf" placeholder="cpf">
+                        <input type="text" name="cpf" id="cpf" required placeholder="cpf">
+                        <span id="cpf-error" class="error-message"></span>
                     </div>
 
                     <div class="input-wrapper">
@@ -132,12 +142,13 @@
 
                     <div class="input-wrapper">
                         <label for="telefone">Telefone </label>
-                        <input type="text" name="telefone" id="telefone" placeholder="telefone">
+                        <input type="text" name="telefone" id="telefone" required placeholder="telefone">
+                        <span id="telefone-error" class="error-message"></span>
                     </div>
 
                     <div class="input-wrapper">
                         <label for="endereco">Endereço </label>
-                        <input type="text" name="endereco" id="endereco" placeholder="endereco">
+                        <input type="text" name="endereco" id="endereco" required placeholder="endereco">
                     </div>
     
                     <button type="submit" id="logar">Cadastrar</button>
