--- a/views/login/esqueci_senha.njk
+++ b/views/login/esqueci_senha.njk
@@ -20,7 +20,7 @@
 
             <div id="error"></div>
 
-            <form method="post" action="/reset_senha" id="form">
+            <form method="post" action="/esqueci_senha" id="form">
                 <div class="input-wrapper">
                     <label for="email">Email </label>
                     <input type="text" name="email" id="email" placeholder="seu@email.com">
